--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,10 @@
+version: '3'
+
+services:
+  react-app:
+    build: .
+    ports:
+      - "5000:5000"
+    environment:
+      - NODE_ENV=production
 
